2008-09-10  Marek Safar  <marek.safar@gmail.com>

	* compiler-tester.cs: Add non-varags LogLine overload.

2008-07-28  Marek Safar  <marek.safar@gmail.com>

	* compiler-tester.cs: Removed ExecuteFile.

2008-07-24  Marek Safar  <marek.safar@gmail.com>

	* compiler-tester.cs: Always exercise symbol writer.

2008-07-29  Martin Baulig  <martin@ximian.com>

	* compiler-tester.cs: Added `-compiler-options' command line
	argument to specify global compiler options in addition to the
	ones which are read from the test cases.

2008-04-22  Marek Safar  <marek.safar@gmail.com>

	* compiler-tester.cs: Print test name when IL reduction is detected.

2008-04-07  Marek Safar  <marek.safar@gmail.com>

	* compiler-tester.cs: Don't report IL reduction as regression.

2008-03-14  Marek Safar  <marek.safar@gmail.com>

	* compiler-tester.cs: Handle new tests correctly.

2008-03-14  Marek Safar  <marek.safar@gmail.com>

	* compiler-tester.cs: Replaced XmlTextWriter and XmlTextReader with
	XmlWriter and XmlReader.

2008-03-14  Marek Safar  <marek.safar@gmail.com>

	* compiler-tester.cs: Added IL regression support.

2008-03-13  Marek Safar  <marek.safar@gmail.com>

	* compiler-tester.cs: Refactored to support verbose mode.
	
2008-02-18  Raja R Harinath  <harinath@hurrynot.org>

	* Makefile ($(dir $(PROGRAM))/.stamp): New.

2008-02-17  Raja R Harinath  <harinath@hurrynot.org>

	* Makefile [PROFILE=net_2_1]: Copy file from net_2_1_raw profile.
	* compiler-tester.cs: Work better with 'net_2_1' profiles.

2007-11-28  Raja R Harinath  <harinath@gmail.com>

	* compiler-tester.cs: Work better with the 'net_2_1' profile.
	* xmldocdiff.cs: Disable in the 'net_2_1' profile.

2007-11-06  Marek Safar  <marek.safar@gmail.com>

	* compiler-tester.cs: Made the test output less verbose.
	
2007-09-21  Marek Safar  <marek.safar@gmail.com>

	* compiler-tester.cs: Mono assembly loading issue has been fixed, switch
	to app-domain execution only.

2007-08-01  Marek Safar  <marek.safar@gmail.com>
